--- a/index.html
+++ b/index.html
@@ -1,63 +1,194 @@
+<!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Suhu by rtm</title>
+<html lang="en-US">
+    <!--<![endif]-->
 
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <section class="container">
-        <header>
-            <h1 style="text-align: center;">Temperature Conversion</h1>
-        </header>
-        <main>
-            <section class="temp-container">
-                <div class="input-container">
-                    <h3>Celcius (&degC)</h3>
-                    <input type="number" name="" id="inputTemp"></input>
-                </div>
-                <div class="input-container">
-                    <h3>Fahrenheit (&degF)</h3>
-                    <textarea name="" id="resultFahrenheit" disabled></textarea>
-                </div>
-            </section>
-            <section class="btn-container">
-                <button class="btn-convert" onclick="convertTemp()">
-                    <b>CONVERT</b>
-                </button>
-            </section>
-            <section class="btn-container">
-                <button class="button btn-reset" onclick="reset()">
-                    <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="66.1699mm" height="68.0303mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 3760 3866" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Layer_x0020_1">
-                            <metadata id="CorelCorpID_0Corel-Layer"/>
-                            <path class="icon-reset" d="M967 2809c24,-37 226,-230 285,-289 33,-33 77,-55 77,-119 0,-64 -56,-83 -113,-83l-1103 0c-70,0 -113,28 -113,98l0 1156c0,53 45,75 98,75 45,0 163,-136 198,-172 45,-44 143,-153 187,-183 40,27 155,145 255,213 50,34 87,61 141,94 235,141 584,267 903,267l12 0 95 0c167,0 219,-5 437,-52 107,-23 208,-62 301,-100 207,-84 438,-243 599,-405 18,-18 31,-31 49,-49 22,-21 28,-35 49,-56 34,-35 62,-74 91,-113 31,-42 57,-76 84,-121 14,-24 24,-37 37,-60 14,-25 23,-42 35,-64 50,-85 167,-367 167,-460 0,-47 -42,-75 -91,-75l-506 0c-109,0 -84,85 -182,247 -75,123 -183,260 -294,348 -21,16 -39,32 -60,46 -442,311 -938,328 -1399,56 -68,-40 -200,-140 -239,-199zm-944 -1344c0,56 27,91 90,91l506 0c80,0 87,-43 110,-102 69,-176 223,-380 367,-494 134,-106 250,-178 423,-233 370,-118 716,-57 1036,131 67,40 199,140 239,199 -25,37 -226,230 -285,289 -33,33 -78,56 -78,119 0,25 17,54 33,65 17,12 54,18 81,18l1102 0c71,0 113,-28 113,-98l0 -1156c0,-52 -45,-75 -98,-75 -45,0 -162,136 -198,172 -45,45 -143,154 -187,183 -53,-36 -76,-73 -124,-110 -47,-37 -81,-69 -131,-103 -298,-203 -644,-361 -1044,-361l-12 0 -94 0c-168,0 -220,5 -438,52 -225,48 -499,182 -684,320l-167 136c-61,56 -105,113 -147,155 -43,43 -142,178 -174,233 -86,145 -63,112 -139,262 -21,42 -100,257 -100,307z"/>
-                        </g>
-                    </svg>
-                </button>
-                <button class="button btn-reverse" onclick="reverse()">
-                    <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="75.686mm" height="68.9179mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 9066 8255" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Layer_x0020_1">
-                            <metadata id="CorelCorpID_0Corel-Layer"/>
-                            <path class="icon-reverse" d="M3461 3225l4345 0c112,0 203,-91 203,-202l0 -1350c0,-112 -91,-203 -203,-203l-4349 0 0 -1296c-1,-183 -213,-217 -356,-123 -525,349 -932,659 -1451,1025 -514,363 -1029,725 -1544,1088 -129,92 -149,258 -12,362 511,381 1038,730 1556,1096 515,363 943,662 1457,1024 131,91 346,92 350,-105 9,-439 7,-878 4,-1316l0 0zm2144 3549l-4346 0c-111,0 -203,-91 -203,-202l0 -1350c0,-111 92,-203 203,-203l4350 0 0 -1296c1,-183 213,-217 355,-123 526,349 933,660 1451,1025 515,363 1030,726 1544,1088 130,93 149,259 12,362 -510,381 -1037,731 -1556,1096 -514,363 -942,662 -1457,1024 -130,92 -345,93 -349,-104 -9,-439 -7,-878 -4,-1317l0 0z"/>
-                        </g>
-                    </svg>
-                </button>
-            </section>
-            <br/>
-            <section class="temp-container">
-                <div>
-                    <h3 style="text-align: center;">How to Calculate</h3>
-                    <textarea name="" id="resultCalculate" class="textarea-result" disabled></textarea>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <p>&copy;renggatamaputra</p>
-        </footer>
-    </section>
-    <script src="js/script.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Renggatama Putra
+        </title><!-- Behavioral Meta Data -->
+        <meta content="yes" name="apple-mobile-web-app-capable">
+        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
+        <meta content="ThemeWagon" name="author">
+        <meta content="The most spectacular coming soon template!" name="description">
+        <meta content="Comming Soon, Responsive, Landing Page, One Page" name="keywords"><!-- Open Graph Meta Data -->
+        <meta content="The most spectacular coming soon template!">
+        <meta content="ThemeWagon">
+        <meta content="ThemeWagon">
+        <meta content="website">
+        <meta content="index.html"><!-- Twitter Card Meta Data -->
+        <meta content="summary" name="twitter:card">
+        <meta content="@themewagon" name="twitter:site">
+        <meta content="@themewagon" name="twitter:creator">
+        <meta content="ThemeWagon" name="twitter:title">
+        <meta content="Imminent - The most spectacular coming soon template!" name="twitter:description">
+
+        <link href="favicon.png" rel="shortcut icon" type="image/png">
+
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+        
+        <!-- CSS -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'><!-- Styles -->
+        <link href="css/loader.css" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <!--[if lt IE 9]>
+            <link rel="stylesheet" type="text/css" href="css/ie.css" />
+        <![endif]-->
+        <!-- Javascript -->
+
+        <script src="js/jquery.js"></script>
+    </head>
+    <body>
+        <div class="preloader">
+            <div class="loading">
+                <h2>
+                    Loading...
+                </h2>
+                <span class="progress"></span>
+            </div>
+        </div>
+
+        <div class="wrapper">
+            <ul class="scene unselectable" data-friction-x="0.1" data-friction-y="0.1" data-scalar-x="25" data-scalar-y="15" id="scene">
+                <li class="layer" data-depth="0.00">
+                </li>
+                <!-- BG -->
+
+                <li class="layer" data-depth="0.10">
+                    <div class="background">
+                    </div>
+                </li>
+
+                <!-- Hero -->
+
+                <li class="layer" data-depth="0.20">
+                    <div class="title">
+                        <h2>
+                            RENGGATAMA PUTRA
+                        </h2>
+                        <span class="line"></span>
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="0.25">
+                    <div class="sphere">
+                        <img alt="sphere" src="images/sphere.png">
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="0.30">
+                    <div class="hero">
+                        <h2 id="sub-title">
+                            The most spectacular portofolio website coming soon!
+                        </h2>
+
+                        <p class="sub-title">
+                            Temporarily open via google drive
+                        </p>
+                    </div>
+                </li>
+
+                <!-- Flakes -->
+
+                <li class="layer" data-depth="0.40">
+                    <div class="depth-1 flake1">
+                        <img alt="flake" src="images/flakes/depth1/flakes1.png">
+                    </div>
+
+                    <div class="depth-1 flake2">
+                        <img alt="flake" src="images/flakes/depth1/flakes2.png">
+                    </div>
+
+                    <div class="depth-1 flake3">
+                        <img alt="flake" src="images/flakes/depth1/flakes3.png">
+                    </div>
+
+                    <div class="depth-1 flake4">
+                        <img alt="flake" src="images/flakes/depth1/flakes4.png">
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="0.50">
+                    <div class="depth-2 flake1">
+                        <img alt="flake" src="images/flakes/depth2/flakes1.png">
+                    </div>
+
+                    <div class="depth-2 flake2">
+                        <img alt="flake" src="images/flakes/depth2/flakes2.png">
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="0.60">
+                    <div class="depth-3 flake1">
+                        <img alt="flake" src="images/flakes/depth3/flakes1.png">
+                    </div>
+
+                    <div class="depth-3 flake2">
+                        <img alt="flake" src="images/flakes/depth3/flakes2.png">
+                    </div>
+
+                    <div class="depth-3 flake3">
+                        <img alt="flake" src="images/flakes/depth3/flakes3.png">
+                    </div>
+
+                    <div class="depth-3 flake4">
+                        <img alt="flake" src="images/flakes/depth3/flakes4.png">
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="0.80">
+                    <div class="depth-4">
+                        <img alt="flake" src="images/flakes/depth4/flakes.png">
+                    </div>
+                </li>
+
+                <li class="layer" data-depth="1.00">
+                    <div class="depth-5">
+                        <img alt="flake" src="images/flakes/depth5/flakes.png">
+                    </div>
+                </li>
+                <!-- Contact -->
+
+                <li class="layer" data-depth="0.20">
+                    <div class="contact">
+                        <ul class="icons">
+                            <li>
+                                <a href="https://drive.google.com/drive/folders/15d9-D2tOXR74tc7THL48Dyayq9A_POEz?usp=drive_link"><i><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"/></svg></i></a>
+                            </li>
+
+                            <li>
+                                <a class="twitter" href="https://x.com/renggatama_p"><i class="fa fa-twitter"></i></a>
+                            </li>
+
+                            <li>
+                                <a class="instagram" href="https://www.instagram.com/renggatamaputra/"><i class="fa fa-instagram"></i></a>
+                            </li>
+                            
+                            <li>
+                                <a class="linkedin" href="https://www.linkedin.com/in/renggatamaputra/"><i class="fa fa-linkedin"></i></a>
+                            </li>
+
+                            <li>
+                                <a class="git" href="https://github.com/renggatamaputra"><i class="fa fa-git"></i></a>
+                            </li>
+                        </ul>
+                        Theme by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+                        <!-- <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a> -->
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Javascript -->
+        <script src="js/plugins.js"></script> 
+        <script src="js/jquery.countdown.min.js"></script> 
+        <script src="js/main.js"></script>
+
+    </body>
 </html>
