--- a/index.html
+++ b/index.html
@@ -66,19 +66,22 @@
                 </li>
 
                 <!-- Hero -->
+                <li class="layer" data-depth="0.25">
+                    <div class="sphere">
+                        <img alt="sphere" src="images/sphere.png">
+                    </div>
+                </li>
 
                 <li class="layer" data-depth="0.20">
-                    <div class="title">
+                    <div class="pp">
+                        <img src="images/pp.png" alt="">
+                    </div>
+                    <br>                    
+                    <div>
                         <h2>
                             RENGGATAMA PUTRA
                         </h2>
                         <span class="line"></span>
-                    </div>
-                </li>
-
-                <li class="layer" data-depth="0.25">
-                    <div class="sphere">
-                        <img alt="sphere" src="images/sphere.png">
                     </div>
                 </li>
 
